--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             </div>
 							
                             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							<p class="m-0">&copy; All Rights Reserved. Designed by <a href="https://mrcyberperson.github.io/mrjishuroy-Resume/">Mr.Jishu Royx</a></p>
+							<p class="m-0">&copy; All Rights Reserved. Designed by <a href="https://mrcyberperson.github.io/mrjishuroy-Resume/">Mr.Jishu Roy</a></p>
                         </div>
                     </section>
                     <!-- Footer End -->
